# everything-githubcopilot

./: .gitignore  .npmignore  .tmp-npm-pack-dry-run.txt  .tmp-old-validators.test.js  .tmp-pack-output.json  .tmp-pack-seconds.txt  AGENTS.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  TROUBLESHOOTING.md  eslint.config.js  package.json  the-longform-guide.md  the-security-guide.md  the-shortform-guide.md
.codex/: AGENTS.md  config.toml  hooks.json
.codex/agents/: agent-auditor.toml  architect.toml  best-practice-researcher.toml  build-error-resolver.toml  code-reviewer.toml  code-structure-auditor.toml  coder.toml  design-coherence-auditor.toml  docs-lookup.toml  e2e-runner.toml  go-reviewer.toml  knowledge-curator.toml  planner.toml  python-reviewer.toml  refactor-cleaner.toml  researcher.toml  safety-checker.toml  security-reviewer.toml  supporter.toml  (+2 more)
.github/: FUNDING.yml  copilot-instructions.md
.opencode/: MIGRATION.md  README.md  index.ts  opencode.json  package.json
docs/: PR-399-REVIEW-2026-03-12.md  migration-status.md  phase-2-context-management-verification.md
rust/semantic-indexer/: Cargo.toml
rust/semantic-indexer/src/: cli.rs  discovery.rs  embedding.rs  extract.rs  ids.rs  indexer.rs  lib.rs  main.rs  metadata.rs  model.rs  parser.rs  report.rs
rust/semantic-indexer/tests/: integration.rs
rust/semantic-indexer/tests/fixtures/: rust_kinds.rs
schemas/: hooks.schema.json
scripts/: AGENTS.md  cleanup-system.ps1  cleanup-system.sh  setup-project.ps1  setup-project.sh  setup-system.ps1  setup-system.sh
(+348 files in other folders)
